--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,11 +4,14 @@
     <span>{{ i18n "footerToTheTop" }}</span>
   </a>
 </div>
-<div class="blank"></div>
+</div>  <!-- container end -->
+<div class="blank">
+    <!-- for footer -->
 </div>
-<div class="footer">
+</div> <!-- wrap end -->
+<footer class="footer">
   COPYRIGHT (C) <a href="https://blog.lulab.net">DONGGEUN,BANG (LUBANG).</a><br />
   ALL RIGHTS RESERVED.
-</div>
+</footer>
 </body>
 </html>
