--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,4 @@
 {{ partial "header.html" . }}
-
+{{ partial "mathjax-header.html" . }}
 {{ partial "post.html" . }}
-
 {{ partial "footer.html" . }}
