--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,6 +8,7 @@ body {
   color: #505050;
   font-family: 'Noto Sans KR', sans-serif;
   line-height: 1.83em;
+  margin-bottom: 70;
 }
 img {
   max-width: 100%;
@@ -108,6 +109,7 @@ img {
 
 /* Container */
 .container {
+  margin: auto;
   width: 100%;
   background: #f4f4f4;
 }
@@ -404,11 +406,22 @@ img {
   }
 }
 
-/* Footer */
+/* wrap, footer */
+
+.wrap {
+  min-height: 100%;
+}
+
+.blank {
+  height: 100px;
+}
+
 .footer {
-  margin-top: 6em;
+  height: 105px;
+  margin-top: -105px;
+  /* padding-top: 5px; */
   background: #536C8D;
-  padding: 10px;
+  /* padding: 10px; */
   color: #c7c7c7;
   font-size: 0.7em;
   text-align: center;
@@ -542,18 +555,4 @@ img[src$='#center_full'] {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-}
-
-
-.wrap {
-  min-height: 100%;
-}
-
-.blank {
-  height: 110px;
-}
-
-.footer {
-  height: 110px;
-  margin-top: -110px;
 }
